--- a/commands/commands.css
+++ b/commands/commands.css
@@ -1,3 +1,58 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
-  background-color: grey;
+    background-color: #303030;
+    background-image: url("background.png");
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+.commandsHeader {
+    position: absolute;
+    height: 290px;
+    top: 0px;
+    left: 0px;
+}
+
+.previousCommand {
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 5%;
+}
+
+.currentCommand {
+    position: absolute;
+    width: 500px;
+    height: 500px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.nextCommand {
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 5%;
+}
+
+.commandsFooter {
+    position: absolute;
+    height: 290px;
+    bottom: 0px;
 }
