--- a/commands/commands.css
+++ b/commands/commands.css
@@ -4,7 +4,7 @@
 
 body {
     background-color: #303030;
-    background-image: url("background.png");
+    background-image: url("../resources/background.png");
     width: 100%;
     height: 100%;
     margin: 0;
@@ -13,8 +13,11 @@ body {
 }
 
 img {
+    position: relative;
     max-width: 100%;
     height: auto;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .commandsHeader {
