--- a/games/games.css
+++ b/games/games.css
@@ -15,13 +15,15 @@ body {
 img {
     position: relative;
     max-width: 100%;
-    height: auto;
+    max-height: 100%;
+    left: 50%;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translate(-50%, -50%);
 }
 
 .gamesHeader {
     position: absolute;
+    width: 100%;
     height: 290px;
     top: 0px;
     left: 0px;
@@ -74,6 +76,11 @@ img {
 
 .gamesFooter {
     position: absolute;
+    width: 100%;
     height: 290px;
     bottom: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+    text-align: center;
+    color: #101010;
 }
